article alignment fix

--- a/unit6/css/style.css
+++ b/unit6/css/style.css
@@ -4,12 +4,6 @@ body {
 	font-size: 18px;
 }
 
-/*h1, h2, h3, h4, h5 {
-	font-weight: normal;
-	padding: 0;
-	margin: 0;
-}*/
-
 #wrapper {
 	width: 1360px;
 	margin: 0 auto;
@@ -114,10 +108,6 @@ a {
 	display: block;
 }
 
-/*.formField {
-	margin-bottom: 3px;
-}
-*/
 #search {
     background-color: #AC68E6;
     -moz-border-radius: 5px;
@@ -164,8 +154,8 @@ a {
 
 #articleRow {
 	float: right;
-/*	display: inline-block;
-*/	padding: 0 0 0 20px;
+	display: inline-block;
+	padding: 0 0 0 20px;
 }
 
 .clearfix:after {
